--- a/package.json
+++ b/package.json
@@ -17,15 +17,16 @@
     "react-dom": "19.2.3",
     "react-paginate": "^8.3.0",
     "use-debounce": "^10.1.0",
-    "yup": "^1.7.1"
+    "yup": "^1.7.1",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
-    "eslint": "^9",
-    "eslint-config-next": "16.1.6",
+    "eslint": "^10.0.2",
+    "eslint-config-next": "^0.2.4",
     "typescript": "^5"
   }
 }
